--- a/Check.SPort/MainWindow.xaml
+++ b/Check.SPort/MainWindow.xaml
@@ -6,6 +6,8 @@
         xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:sm="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:Check.SPort" 
+        xmlns:view="clr-namespace:Check.SPort.View"
+        xmlns:vm="clr-namespace:Check.SPort.ViewModel"
         TextElement.Foreground="{DynamicResource MaterialDesignLightForeground}"
         TextElement.FontWeight="Regular"
         TextElement.FontSize="13"
@@ -14,258 +16,14 @@
         Background="White"
         FontFamily="{DynamicResource MaterialDesignFont}"
         mc:Ignorable="d"
-        Title="Check Serial Port" 
-        Height="450" Width="900" 
-        MinHeight="450" MinWidth="900" 
-        MaxHeight="450" MaxWidth="900" 
-        WindowState="Normal" WindowStartupLocation="CenterScreen" Closed="Window_Closed">
-
-    <Window.Resources>
-        <Style x:Key="TxtStyle" TargetType="{x:Type TextBox}" BasedOn="{StaticResource MaterialDesignFilledTextBox}">
-            <Setter Property="FontSize" Value="15" />
-            <Setter Property="Height" Value="55" />
-            <Setter Property="Width" Value="125" />
-            <Setter Property="Padding" Value="10,0,10,5" />
-            <Setter Property="Margin" Value="5" />
-            <Setter Property="VerticalContentAlignment" Value="Center" />
-            <Setter Property="HorizontalAlignment" Value="Center" />
-            <Setter Property="BorderBrush" Value="Black" />
-            <Setter Property="BorderThickness" Value="1,1,1,2" />
-            <Setter Property="md:ComboBoxAssist.ShowSelectedItem" Value="True" />
-            <Style.Triggers>
-                <DataTrigger Binding="{Binding Content, ElementName=btnOpenClose}" Value="CLOSE">
-                    <Setter Property="IsEnabled" Value="False"/>
-                </DataTrigger>
-                <DataTrigger Binding="{Binding Content, ElementName=btnOpenClose}" Value="OPEN">
-                    <Setter Property="IsEnabled" Value="True"/>
-                </DataTrigger>
-                <Trigger Property="IsEnabled" Value="False">
-                    <Setter Property="md:TextFieldAssist.HasClearButton" Value="False" />
-                </Trigger>
-                <Trigger Property="IsEnabled" Value="True">
-                    <Setter Property="md:TextFieldAssist.HasClearButton" Value="True" />
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-        <Style x:Key="CbxStyle" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource MaterialDesignFilledComboBox}">
-            <Setter Property="FontSize" Value="15" />
-            <Setter Property="Height" Value="55" />
-            <Setter Property="Width" Value="125" />
-            <Setter Property="Padding" Value="10,0,10,5" />
-            <Setter Property="Margin" Value="5" />
-            <Setter Property="VerticalContentAlignment" Value="Center" />
-            <Setter Property="HorizontalAlignment" Value="Center" />
-            <Setter Property="BorderBrush" Value="Black" />
-            <Setter Property="BorderThickness" Value="1,1,1,2" />
-            <Setter Property="md:ComboBoxAssist.ShowSelectedItem" Value="True" />
-            <Style.Triggers>
-                <DataTrigger Binding="{Binding Content, ElementName=btnOpenClose}" Value="CLOSE">
-                    <Setter Property="IsEnabled" Value="False"/>
-                </DataTrigger>
-                <DataTrigger Binding="{Binding Content, ElementName=btnOpenClose}" Value="OPEN">
-                    <Setter Property="IsEnabled" Value="True"/>
-                </DataTrigger>
-                <Trigger Property="IsEnabled" Value="False">
-                    <Setter Property="md:TextFieldAssist.HasClearButton" Value="False" />
-                </Trigger>
-                <Trigger Property="IsEnabled" Value="True">
-                    <Setter Property="md:TextFieldAssist.HasClearButton" Value="True" />
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-        <Style x:Key="TxtHint" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource MaterialDesignTextBlock}">
-            <Setter Property="FontSize" Value="15" />
-            <Setter Property="Padding" Value="0" />
-            <Setter Property="Margin" Value="0" />
-            <Setter Property="Foreground" Value="Black" />
-        </Style>
-        <Style x:Key="SendButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource MaterialDesignOutlinedDarkButton}">
-            <Setter Property="Margin" Value="10" />
-            <Setter Property="Width" Value="75" />
-            <Setter Property="Height" Value="55" />
-            <Setter Property="BorderBrush" Value="Black" />
-            <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="md:HintAssist.IsFloating" Value="False" />
-            <Style.Triggers>
-                <DataTrigger Binding="{Binding Text.Length, ElementName=txtCMD}" Value="0">
-                    <Setter Property="IsEnabled" Value="False"/>
-                </DataTrigger>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Opacity" Value="1.0" />
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-        <Style x:Key="TxtResponseCmd" TargetType="{x:Type TextBox}" BasedOn="{StaticResource MaterialDesignOutlinedTextBox}">
-            <Setter Property="VerticalScrollBarVisibility" Value="Auto" />
-            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-            <Setter Property="Padding" Value="5" />
-            <Setter Property="IsReadOnly" Value="True" />
-            <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="BorderBrush" Value="Black" />
-            <Setter Property="Margin" Value="7,0,5,7" />
-            <Setter Property="TextWrapping" Value="Wrap" />
-            <Setter Property="AcceptsReturn" Value="True" />
-            <Setter Property="md:HintAssist.Hint" Value="Response commands" />
-        </Style>
-        <Style x:Key="BtnStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource MaterialDesignOutlinedDarkButton}">
-            <Setter Property="Margin" Value="5,7" />
-            <Setter Property="Padding" Value="0" />
-            <Setter Property="BorderBrush" Value="Black" />
-            <Setter Property="BorderThickness" Value="1" />
-        </Style>
-    </Window.Resources>
+        Title="Check Connection"
+        Height="450" Width="900"
+        MinHeight="450" MinWidth="900"
+        MaxHeight="450" MaxWidth="900"
+        WindowState="Normal"
+        WindowStartupLocation="CenterScreen">
 
     <Grid>
-        <Grid.Background>
-            <ImageBrush ImageSource="\Resources\Image\sfondo_001.jpg"/>
-        </Grid.Background>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height=".5*" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-
-            <UniformGrid Columns="3" Rows="2" Grid.ColumnSpan="2" VerticalAlignment="Center" Visibility="{Binding IsChecked, ElementName=rbtnSerial, Converter={StaticResource BooleanToVisibilityConverter}}">
-                <ComboBox x:Name="cbxPortName" Style="{StaticResource CbxStyle}" Background="#FFEFB059">
-                    <md:HintAssist.Hint>
-                        <StackPanel>
-                            <TextBlock Text="Porta COM" Style="{StaticResource TxtHint}" />
-                        </StackPanel>
-                    </md:HintAssist.Hint>
-                </ComboBox>
-
-                <ComboBox x:Name="cbxBaudRate" Style="{StaticResource CbxStyle}" Background="#FFEFB059">
-                    <md:HintAssist.Hint>
-                        <StackPanel>
-                            <TextBlock Text="Baud Rate" Style="{StaticResource TxtHint}"  />
-                        </StackPanel>
-                    </md:HintAssist.Hint>
-                    <ComboBoxItem Content="9600" IsSelected="True" />
-                    <ComboBoxItem Content="14400" />
-                    <ComboBoxItem Content="19200" />
-                </ComboBox>
-
-                <ComboBox Name="cbxParity" Style="{StaticResource CbxStyle}" Background="#FFEFB059">
-                    <md:HintAssist.Hint>
-                        <StackPanel>
-                            <TextBlock Text="Paraty" Style="{StaticResource TxtHint}"  />
-                        </StackPanel>
-                    </md:HintAssist.Hint>
-                </ComboBox>
-
-                <ComboBox Name="cbxStopBits" Style="{StaticResource CbxStyle}" Background="#FFEFB059" SelectedValuePath="Tag">
-                    <md:HintAssist.Hint>
-                        <StackPanel>
-                            <TextBlock Text="Stop Bits" Style="{StaticResource TxtHint}"  />
-                        </StackPanel>
-                    </md:HintAssist.Hint>
-                    <ComboBoxItem Content="None" Tag="None" />
-                    <ComboBoxItem Content="1 stop bit" IsSelected="True" Tag="One" />
-                    <ComboBoxItem Content="1,5 stop bit" Tag="OnePointFive" />
-                    <ComboBoxItem Content="2 stop bit" Tag="Two" />
-                </ComboBox>
-
-                <ComboBox Name="cbxDatabits" Style="{StaticResource CbxStyle}" Background="#FFEFB059">
-                    <md:HintAssist.Hint>
-                        <StackPanel>
-                            <TextBlock Text="Databits" Style="{StaticResource TxtHint}"  />
-                        </StackPanel>
-                    </md:HintAssist.Hint>
-                    <ComboBoxItem Content="5" />
-                    <ComboBoxItem Content="6" />
-                    <ComboBoxItem Content="7" />
-                    <ComboBoxItem Content="8" IsSelected="True" />
-                </ComboBox>
-
-                <ComboBox Name="cbxFlowControl" Style="{StaticResource CbxStyle}" Background="#FFEFB059" SelectedValuePath="Tag">
-                    <md:HintAssist.Hint>
-                        <StackPanel>
-                            <TextBlock Text="Flow controll" Style="{StaticResource TxtHint}"  />
-                        </StackPanel>
-                    </md:HintAssist.Hint>
-                    <ComboBoxItem Content="Hardware" Tag="RequestToSend" />
-                    <ComboBoxItem Content="XonXoff" IsSelected="True" Tag="XOnXOff" />
-                    <ComboBoxItem Content="None" Tag="None" />
-                </ComboBox>
-            </UniformGrid>
-
-            <UniformGrid Columns="2" Grid.ColumnSpan="2" VerticalAlignment="Center" Visibility="{Binding IsChecked, ElementName=rbtnETH, Converter={StaticResource BooleanToVisibilityConverter}}">
-                <TextBox x:Name="txtIPAddress" Background="#FFEFB059" Text="192.168.1.17"
-                         Style="{StaticResource TxtStyle}" Width="155" MaxLength="15">
-                    <md:HintAssist.Hint>
-                        <StackPanel>
-                            <TextBlock Text="IP Address" Style="{StaticResource TxtHint}"  />
-                        </StackPanel>
-                    </md:HintAssist.Hint>
-                </TextBox>
-                <TextBox x:Name="txtPortETH" Text="9100" Background="#FFEFB059" Style="{StaticResource TxtStyle}">
-                    <md:HintAssist.Hint>
-                        <StackPanel>
-                            <TextBlock Text="Port" Style="{StaticResource TxtHint}" />
-                        </StackPanel>
-                    </md:HintAssist.Hint>
-                </TextBox>
-            </UniformGrid>
-
-            <UniformGrid Columns="2" Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center">
-
-                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,5,0">
-                    <RadioButton x:Name="rbtnSerial" GroupName="ETH" Padding="1,2" IsChecked="True" Style="{StaticResource MaterialDesignRadioButton}"
-                                 Background="Black" Click="ControlloChangeRB_Click">
-                        <RadioButton.Content>
-                            <Border BorderThickness="1" BorderBrush="Purple" CornerRadius="2" Background="Azure" Padding="5,1">
-                                <TextBlock Text="Seriale" FontWeight="Black" />
-                            </Border>
-                        </RadioButton.Content>
-                    </RadioButton>
-                    <RadioButton x:Name="rbtnETH" GroupName="ETH" Padding="1,2" Style="{StaticResource MaterialDesignRadioButton}"
-                                 Background="Black" Click="ControlloChangeRB_Click">
-                        <RadioButton.Content>
-                            <Border BorderThickness="1" BorderBrush="Purple" CornerRadius="2" Background="Azure" Padding="5,1">
-                                <TextBlock Text="ETHERNET" FontWeight="Black" />
-                            </Border>
-                        </RadioButton.Content>
-                    </RadioButton>
-                </StackPanel>
-
-                <Button x:Name="btnOpenClose" Background="#FF4FE0F7" Click="BtnOpenClose_Click" Content="OPEN"
-                        Style="{StaticResource BtnStyle}" Width="125" Height="55" FontSize="20" Cursor="" />
-            </UniformGrid>
-
-            <Border Grid.Row="1" Grid.ColumnSpan="3">
-                <DockPanel HorizontalAlignment="Center">
-                    <TextBox x:Name="txtCMD" Background="#FFF3FAF3" Height="55" Width="650" 
-                             VerticalContentAlignment="Center" Padding="5,0" FontSize="18"
-                             md:HintAssist.Hint="COMANDO"
-                             md:TextFieldAssist.HasClearButton="True" />
-                    <Button x:Name="btnSend" Content="SEND" Grid.Row="0" Grid.Column="2"
-                            Style="{StaticResource SendButtonStyle}" 
-                            Background="#FF4FE0F7" Click="BtnSend_Click"/>
-                </DockPanel>
-            </Border>
-
-            <UniformGrid Columns="2" Grid.Row="2" Grid.ColumnSpan="3">
-                <TextBox x:Name="txtResponse" Background="#FFF3FAF3" Style="{StaticResource TxtResponseCmd}" />
-
-                <DockPanel>
-                    <Button x:Name="btnFileCmd" Click="BtnFileCmd_Click" Background="#FF4FE0F7"
-                            Style="{StaticResource BtnStyle}" Width="135" Height="55">
-                        <Button.Content>
-                            <StackPanel Orientation="Horizontal">
-                                <md:PackIcon Kind="FileDocumentBox" Width="50" Height="50" VerticalAlignment="Center" />
-                                <TextBlock Text="Apri File CMD" TextWrapping="Wrap" Margin="1,0,0,0" Width="60" Height="35" />
-                            </StackPanel>
-                        </Button.Content>
-                    </Button>
-                </DockPanel>
-            </UniformGrid>
-
-        </Grid>
+        
     </Grid>
 </Window>
