--- a/Check.SPort/App.xaml
+++ b/Check.SPort/App.xaml
@@ -8,18 +8,18 @@
     <Application.Resources>
         <!-- Aggiungi questi riferimenti per Material Design -->
         <ResourceDictionary>
-            
+
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Dark.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.ObsoleteStyles.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.ObsoleteBrushes.xaml" />
+                <ResourceDictionary Source="/Styles/Pages.xaml" />
+                <ResourceDictionary Source="/Styles/Buttons.xaml" />
+                <ResourceDictionary Source="/Styles/TextBlock.xaml" />
+                <ResourceDictionary Source="/Utilities/DataTemplates.xaml" />
             </ResourceDictionary.MergedDictionaries>
-
-            <!-- DataTemplate -->
-            <DataTemplate DataType="{x:Type vm:MainViewModel}">
-                <view:MainView />
-            </DataTemplate>
+            
         </ResourceDictionary>
     </Application.Resources>
 </Application>
